# cloudsnippet-api

./: .env  mongodb_docker_compose.yml  pyproject.toml  requirements.txt  run.sh  start_all.sh
app/: main.py
app/api/v1/routers/: __init__.py  health.py  tools.py  users.py
app/core/: config.py  logging.py  security.py
app/core/cache/: __init__.py  base.py  cache_manager.py  memory_cache.py  redis_cache.py
app/core/config/: settings.py
app/core/exceptions/: base.py  handlers.py
app/core/models/: users.py
app/core/repositories/: users.py
app/core/schemas/: users.py
app/core/services/: base.py  users.py
app/exceptions/: __init__.py  ai_error_handler.py  ai_exceptions.py  handlers.py  repository_exceptions.py  workflow_error_handler.py
app/infrastructure/agents/: data_generator.py  workflow_processor.py
app/infrastructure/cache/: cache_manager.py
app/infrastructure/database/: mongodb.py
app/infrastructure/exceptions/: ai_error_handler.py  error_handler.py  workflow_error_handler.py  workflow_exceptions.py
app/infrastructure/repositories/: tools_repository.py
app/models/: tool_models.py
app/schemas/: best_practice_schema.py  response_base.py  tool_projection.py  tool_schemas.py  troubleshooting_schemas.py
app/schemas/tools/: __init__.py  base.py  best_practice.py  examples.py  implementation.py  root_cause.py  schemas.py  solution.py  tool.py  tool_schemas.py
app/services/: tool_service.py
app/utlis/: findTools.py
db_scripts/: db_migration.py
docs/: common-tasks.md
tests/routers/: test_tools.py
(+2 files in other folders)
